# tag-sync

./: 404.html  CHANGELOG.md  Makefile  README.md  index.html  pyproject.toml  search.json  sitemap.xml
.github/workflows/: deploy.yml  docs.yml  qa.yml
docs/: mkdocs.yaml
docs/source/: features.md  index.md  publishing.md  quickstart.md
features/: index.html
publishing/: index.html
quickstart/: index.html
src/tag_sync/: __init__.py  config.py  constants.py  exceptions.py  packager.py  pattern.py  semver.py  tagger.py  version.py
src/tag_sync/cli/: __init__.py  main.py
tests/integration/: check.autodetect.feature  check.feature  check.npm.feature  conftest.py  nuke.feature  publish.feature  verify.autodetect.feature  verify.feature  verify.npm.feature
tests/integration/steps/: autodetect_steps.py  check_steps.py  npm_steps.py  nuke_steps.py  publish_steps.py  verify_steps.py
tests/unit/: test_cli.py  test_config.py  test_packager.py  test_pattern.py  test_semver.py  test_tagger.py
